# amagpu

./: .gitignore
cumsum/: CMakeLists.txt  cumsum.cl  cumsum.cpp
downsampling/: CMakeLists.txt  downsampling.cl  downsampling.cpp  imageadp.cpp  imageadp.hpp
median/: CMakeLists.txt  median.cl  median.cpp
trigraph/: CMakeLists.txt  result copy.csv  result.csv  results.txt  trigraph.cl
